[package]
name = "hcs-12ss59t"
description = "Platform-agnostic embedded-hal driver for Samsung HCS-12SS59T VFD displays."
version = "0.1.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
keywords = ["hcs-12ss59t", "display", "no_std", "embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support", "embedded-hal"]
license = "MIT"

[dependencies]
embedded-hal = "1.0.0-alpha.10"

