[package]
name = "hcs-12ss59t"
description = "Platform-agnostic embedded-hal driver for Samsung HCS-12SS59T VFD displays."
version = "0.1.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
keywords = ["hcs-12ss59t", "display", "no_std", "embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support", "embedded-hal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embediver/hcs-12ss59t-rs"

[dependencies]
embedded-hal = "1"

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }

