[package]
name = "hcs-12ss59t"
description = "Platform-agnostic embedded-hal driver for Samsung HCS-12SS59T VFD displays."
version = "1.0.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
keywords = ["hcs-12ss59t", "display", "no_std", "embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embediver/hcs-12ss59t-rs"

[features]
async = ["dep:embedded-hal-async", "embedded-hal-mock/embedded-hal-async"]

[dependencies]
embedded-hal = "1"
embedded-hal-async = { version = "1", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.0", default-features = false, features = ["eh1"] }
tokio = { version = "1.43", features = ["rt", "macros"]}

